--- a/index.html
+++ b/index.html
@@ -1,299 +1,113 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Levent | Fotoğraf Galerisi</title>
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Levent - Gözlemden İzlenim</title>
   <style>
     body {
       margin: 0;
-      background: #fff;
-      font-family: "Inter", sans-serif;
-      color: #000;
-      overflow-x: hidden;
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
     }
 
-    /* --- ÜST MENÜ --- */
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 16px 24px;
-      border-bottom: 1px solid #ddd;
-      background: rgba(255, 255, 255, 0.95);
-      position: sticky;
-      top: 0;
-      z-index: 10;
-    }
-
-    .logo {
+      padding: 20px;
       font-size: 20px;
-      font-weight: 600;
+      letter-spacing: 1px;
     }
 
     .menu-icon {
-      width: 24px;
       cursor: pointer;
+      width: 25px;
+      height: 20px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 16px;
     }
 
-    .menu-icon span {
-      display: block;
-      height: 2px;
-      width: 100%;
-      background-color: #000;
-      border-radius: 1px;
+    .menu-icon div {
+      height: 3px;
+      background-color: #fff;
+      border-radius: 2px;
     }
 
-    /* --- ALBÜM MENÜSÜ --- */
-    #albumMenu {
-      position: fixed;
-      top: 60px;
-      right: 16px;
-      background: rgba(255, 255, 255, 0.92);
-      border: 1px solid rgba(0, 0, 0, 0.15);
-      border-radius: 12px;
-      padding: 12px 0;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-      z-index: 100;
-      backdrop-filter: blur(8px);
-      transition: opacity 0.3s ease;
-    }
-
-    #albumMenu.hidden {
+    .menu {
       display: none;
+      position: fixed;
+      top: 0;
+      right: 0;
+      background: rgba(0, 0, 0, 0.95);
+      height: 100vh;
+      width: 250px;
+      padding: 60px 20px;
     }
 
-    #albumMenu div {
-      padding: 10px 24px;
-      cursor: pointer;
-      font-weight: 500;
+    .menu a {
+      display: block;
+      color: #fff;
+      text-decoration: none;
+      font-size: 18px;
+      margin-bottom: 20px;
     }
 
-    #albumMenu div:hover {
-      background: rgba(0, 0, 0, 0.05);
+    .menu.active {
+      display: block;
     }
 
-    /* --- GALERİ --- */
-    #gallery {
-      display: grid;
-      gap: 8px;
-      padding: 8px;
-      transition: all 0.3s ease;
+    .gallery {
+      column-count: 3;
+      column-gap: 0;
     }
 
-    /* Dikey ekran (9:16) → 2 sütun */
-    @media screen and (orientation: portrait) {
-      #gallery {
-        grid-template-columns: repeat(2, 1fr);
+    .gallery img {
+      width: 100%;
+      display: block;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Dikey ekranlar için 2 sütuna düşür */
+    @media (max-aspect-ratio: 9/10) {
+      .gallery {
+        column-count: 2;
       }
     }
-
-    /* Yatay ekran (16:9) → 3 sütun */
-    @media screen and (orientation: landscape) {
-      #gallery {
-        grid-template-columns: repeat(3, 1fr);
-      }
-    }
-
-    .photo-box {
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #000;
-    }
-
-    .photo-box img {
-      width: 100%;
-      height: auto;
-      display: block;
-      cursor: pointer;
-      user-select: none;
-      -webkit-user-drag: none;
-      transition: transform 0.3s ease;
-    }
-
-    .photo-box img:hover {
-      transform: scale(1.03);
-    }
-
-    /* --- OVERLAY (Fotoğraf büyük görünümü) --- */
-    #overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.9);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      z-index: 1000;
-      touch-action: manipulation;
-    }
-
-    #overlay img {
-      max-width: 90vw;
-      max-height: 90vh;
-    }
-
-    #overlay span {
-      color: #fff;
-      margin-top: 10px;
-    }
-
-    #closeBtn, #prevBtn, #nextBtn {
-      position: absolute;
-      color: #fff;
-      font-size: 32px;
-      background: rgba(0, 0, 0, 0.5);
-      border: none;
-      padding: 10px 14px;
-      cursor: pointer;
-      z-index: 1001;
-      user-select: none;
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.3s ease;
-    }
-
-    #overlay.show-controls #closeBtn,
-    #overlay.show-controls #prevBtn,
-    #overlay.show-controls #nextBtn {
-      opacity: 1;
-      pointer-events: auto;
-    }
-
-    #closeBtn {
-      top: 10px;
-      right: 20px;
-    }
-
-    #prevBtn {
-      left: 20px;
-      bottom: 20px;
-    }
-
-    #nextBtn {
-      right: 20px;
-      bottom: 20px;
-    }
-
   </style>
 </head>
 <body>
-
   <header>
-    <div class="logo">Levent</div>
-    <div class="menu-icon" id="menuToggle">
-      <span></span>
-      <span></span>
-      <span></span>
+    <div>Levent</div>
+    <div class="menu-icon" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
   </header>
 
-  <div id="albumMenu" class="hidden"></div>
-
-  <div id="gallery"></div>
-
-  <div id="overlay">
-    <button id="closeBtn">✕</button>
-    <button id="prevBtn">‹</button>
-    <img id="overlayImage" src="" alt="">
-    <button id="nextBtn">›</button>
-    <span id="imageCounter"></span>
+  <div class="menu" id="menu">
+    <a href="album1.html">Albüm 1</a>
+    <a href="album2.html">Albüm 2</a>
+    <a href="album3.html">Albüm 3</a>
   </div>
 
+  <main class="gallery">
+    <img src="albums/album1/photo1.jpg" alt="">
+    <img src="albums/album1/photo2.jpg" alt="">
+    <img src="albums/album1/photo3.jpg" alt="">
+    <img src="albums/album1/photo4.jpg" alt="">
+    <img src="albums/album1/photo5.jpg" alt="">
+    <img src="albums/album1/photo6.jpg" alt="">
+  </main>
+
   <script>
-    const menuToggle = document.getElementById("menuToggle");
-    const albumMenu = document.getElementById("albumMenu");
-    const gallery = document.getElementById("gallery");
-    const overlay = document.getElementById("overlay");
-    const overlayImage = document.getElementById("overlayImage");
-    const imageCounter = document.getElementById("imageCounter");
-    const closeBtn = document.getElementById("closeBtn");
-    const prevBtn = document.getElementById("prevBtn");
-    const nextBtn = document.getElementById("nextBtn");
-
-    let currentAlbum = "";
-    let currentIndex = 0;
-    let currentImages = [];
-    let controlsVisible = true;
-
-    menuToggle.addEventListener("click", () => {
-      albumMenu.classList.toggle("hidden");
-    });
-
-    closeBtn.onclick = hideOverlay;
-    prevBtn.onclick = () => showOverlay((currentIndex - 1 + currentImages.length) % currentImages.length);
-    nextBtn.onclick = () => showOverlay((currentIndex + 1) % currentImages.length);
-
-    // Albümleri yükle
-    fetch("Galeri/albums.json")
-      .then(res => res.json())
-      .then(albums => {
-        albums.forEach(album => {
-          const div = document.createElement("div");
-          div.textContent = album;
-          div.onclick = () => {
-            loadAlbum(album);
-            albumMenu.classList.add("hidden");
-          };
-          albumMenu.appendChild(div);
-        });
-        loadAlbum(albums[0]);
-      });
-
-    function loadAlbum(album) {
-      gallery.innerHTML = "Yükleniyor...";
-      fetch(`Galeri/${album}/index.json`)
-        .then(res => res.json())
-        .then(images => {
-          currentAlbum = album;
-          currentImages = images;
-          gallery.innerHTML = "";
-          images.forEach((filename, idx) => {
-            const box = document.createElement("div");
-            box.className = "photo-box";
-            const img = document.createElement("img");
-            img.src = `Galeri/${album}/${filename}`;
-            img.onclick = () => showOverlay(idx);
-            box.appendChild(img);
-            gallery.appendChild(box);
-          });
-        })
-        .catch(() => gallery.innerHTML = "Fotoğraflar yüklenemedi.");
+    function toggleMenu() {
+      document.getElementById('menu').classList.toggle('active');
     }
-
-    function showOverlay(index) {
-      overlay.style.display = "flex";
-      overlay.classList.add("show-controls");
-      overlay.classList.remove("hide-controls");
-      controlsVisible = true;
-      currentIndex = index;
-      overlayImage.src = `Galeri/${currentAlbum}/${currentImages[index]}`;
-      imageCounter.textContent = `(${index + 1}/${currentImages.length})`;
-    }
-
-    function hideOverlay() {
-      overlay.style.display = "none";
-    }
-
-    overlay.addEventListener("click", (e) => {
-      if (e.target === overlay) hideOverlay();
-    });
-
-    document.addEventListener("keydown", e => {
-      if (overlay.style.display === "flex") {
-        if (e.key === "ArrowRight") showOverlay((currentIndex + 1) % currentImages.length);
-        if (e.key === "ArrowLeft") showOverlay((currentIndex - 1 + currentImages.length) % currentImages.length);
-        if (e.key === "Escape") hideOverlay();
-      }
-    });
   </script>
 </body>
 </html>
