--- a/index.html
+++ b/index.html
@@ -78,9 +78,12 @@
       background: rgba(0, 0, 0, 0.05);
     }
 
-    /* --- GALERİ (Masonry düzeni) --- */
+/* --- GALERİ (Kare Izgara Düzeni) --- */
 #gallery {
-  column-gap: 8px; /* sütunlar arası eşit boşluk */
+  display: grid;
+  /* Ekran genişliğine göre sütun sayısını dinamik olarak ayarla */
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 8px; /* Öğeler arası eşit boşluk */
   padding: 58px;
 }
 
@@ -91,45 +94,56 @@
   }
 }
 
-/* Yatay ekran (16:9) → 3 sütun */
-@media screen and (orientation: landscape) {
+/* Dikey ekran (9:16) → Daha az, büyük kare */
+@media screen and (orientation: portrait) {
   #gallery {
-    column-count: 3;
+    grid-template-columns: repeat(auto-fill, minmax(40vw, 1fr));
   }
 }
 
-/* Fotoğraf kutuları sütun akışına göre hizalanacak */
+/* Fotoğraf kutularının kare olmasını sağla */
+/* Fotoğraf kutularının kare olmasını sağla */
 .photo-box {
-  display: inline-block;
-  width: 100%;
-  margin-bottom: 8px; /* alt boşluk — sütunlar arası akış */
   background: #000;
   overflow: hidden;
   border-radius: 4px;
-}
-    }
+  
+  /* Kare yapmanın anahtarı: */
+  width: 100%; 
+  padding-top: 100%; /* Yüksekliği genişliğe eşitle (1:1 en boy oranı) */
+  position: relative; /* İçindeki img'yi konumlandırmak için */
 
-    .photo-box {
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #000;
-    }
-
- .photo-box img {
+  /* Not: Bu kısmı siliyoruz çünkü yukarıdaki padding-top ile kare yapısını sağlıyoruz. 
+     Ayrıca inline-block ve width: 100% de artık gerekmiyor. */
+  /* display: inline-block;
   width: 100%;
-  height: auto;
+  margin-bottom: 8px; */ 
+  
+}
+ 
+/* 'photo-box img' kuralını da kare kutuya sığacak şekilde güncelliyoruz */
+.photo-box img {
+  /* img'yi kapsayıcının (photo-box'ın) içine sığdır */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  
+  /* Görseli kareye sığdırmak için: */
+  object-fit: cover; /* Resmi en boy oranını bozmadan kapsayıcıyı doldurur */
+  object-position: center; /* Resmi ortalar */
+
   display: block;
   cursor: pointer;
   user-select: none;
   -webkit-user-drag: none;
   transition: transform 0.3s ease;
-  object-fit: cover;
+  /* object-fit: cover; mevcut kuralda var, ancak tam kare sığdırma için burada tutmak kritik. */
 }
 
     .photo-box img:hover {
-      transform: scale(1.03);
+      transform: scale(1.01);
     }
 
     /* --- OVERLAY (Fotoğraf büyük görünümü) --- */
@@ -307,6 +321,7 @@
   </script>
 </body>
 </html>
+
 
 
 
