--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 /* Fotoğraf kutularının kare olmasını sağla */
 .photo-box {
-  background: #000; /* Boş kalan kısımlar siyah olacak */
+  background: #fff; /* Boş kalan kısımlar siyah olacak */
   overflow: hidden;
   border-radius: 4px;
   
@@ -310,6 +310,7 @@
   </script>
 </body>
 </html>
+
 
 
 
