--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 /* 'photo-box img' kuralını sığdırma (contain) olarak güncelliyoruz */
 .photo-box img {
   /* img'yi kapsayıcının (photo-box'ın) içine sığdır */
-  position: absolute;
+  position: center;
   top: 0;
   left: 0;
   width: 90%;
@@ -372,6 +372,7 @@
   </script>
 </body>
 </html>
+
 
 
 
