--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 #gallery {
   display: grid;
   gap: 8px; /* Öğeler arası eşit boşluk */
+  padding: 50px;
 }
 
 /* Dikey ekran (9:16) → 2 sütun */
 @media screen and (orientation: portrait) {
   #gallery {
     grid-template-columns: repeat(2, 1fr); /* Tam 2 sütun */
-    padding: 30px;
   }
 }
 
@@ -96,7 +96,6 @@
 @media screen and (orientation: landscape) {
   #gallery {
     grid-template-columns: repeat(3, 1fr); /* Tam 3 sütun */
-    padding: 60px;
   }
 }
 
@@ -106,20 +105,23 @@
   overflow: hidden;
   border-radius: 0px;
   
+  width: %100;
+  height: 
   /* Kare yapmanın anahtarı: */
-  width: 100%; 
-  padding-top: 100%; /* Yüksekliği genişliğe eşitle (1:1 en boy oranı) */
-  position: relative; 
+  /*width: 100%; 
+  /*padding-top: 100%; /* Yüksekliği genişliğe eşitle (1:1 en boy oranı) */
+  /*position: relative; 
+  
 }
 
 /* 'photo-box img' kuralını sığdırma (contain) olarak güncelliyoruz */
 .photo-box img {
   /* img'yi kapsayıcının (photo-box'ın) içine sığdır */
-  position: center;
+  position: absolute;
   top: 0;
   left: 0;
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   
   /* Görseli kutuya sığdırmak için: */
   object-fit: contain; /* EN BOY ORANINI koruyarak kutuya sığdırır */
@@ -372,6 +374,7 @@
   </script>
 </body>
 </html>
+
 
 
 
